--- a/views/errorPage.erb
+++ b/views/errorPage.erb
@@ -37,7 +37,7 @@
 </head>
 <body>
 	<div class="welcome">
-	Enter Correct Values
+	Enter Correct Values eg @TXTCURRENCY USD INR
 	</div>
 </body>
 </html>
